--- a/env/requirements.txt
+++ b/env/requirements.txt
@@ -1,3 +1,164 @@
-# packages in environment at C:\Users\ninao\anaconda3\envs\practica0:
-#
-# Name                    Version                   Build  Channel
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: win-64
+# created-by: conda 24.9.1
+anyio=4.6.2.post1=pypi_0
+argon2-cffi=23.1.0=pypi_0
+argon2-cffi-bindings=21.2.0=pypi_0
+arrow=1.3.0=pypi_0
+asttokens=2.4.1=pypi_0
+async-lru=2.0.4=pypi_0
+attrs=24.2.0=pypi_0
+babel=2.16.0=pypi_0
+beautifulsoup4=4.12.3=pypi_0
+bleach=6.1.0=pypi_0
+brotli=1.1.0=h2466b09_2
+brotli-bin=1.1.0=h2466b09_2
+bzip2=1.0.8=h2bbff1b_6
+ca-certificates=2024.9.24=haa95532_0
+certifi=2024.8.30=pyhd8ed1ab_0
+cffi=1.17.1=pypi_0
+charset-normalizer=3.4.0=pypi_0
+colorama=0.4.6=pyhd8ed1ab_0
+comm=0.2.2=pypi_0
+contourpy=1.3.0=py313h1ec8472_2
+cycler=0.12.1=pyhd8ed1ab_0
+debugpy=1.8.7=pypi_0
+decorator=5.1.1=pypi_0
+defusedxml=0.7.1=pypi_0
+executing=2.1.0=pypi_0
+expat=2.6.3=h5da7b33_0
+fastjsonschema=2.20.0=pypi_0
+fonttools=4.54.1=py313ha7868ed_0
+fqdn=1.5.1=pypi_0
+freetype=2.12.1=ha860e81_0
+h11=0.14.0=pypi_0
+httpcore=1.0.6=pypi_0
+httpx=0.27.2=pypi_0
+idna=3.10=pypi_0
+importlib-resources=6.4.5=pyhd8ed1ab_0
+importlib_resources=6.4.5=pyhd8ed1ab_0
+intel-openmp=2024.2.1=h57928b3_1083
+ipykernel=6.29.5=pypi_0
+ipython=8.28.0=pypi_0
+ipywidgets=8.1.5=pypi_0
+isoduration=20.11.0=pypi_0
+jedi=0.19.1=pypi_0
+jinja2=3.1.4=pyhd8ed1ab_0
+jpeg=9e=hcfcfb64_3
+json5=0.9.25=pypi_0
+jsonpointer=3.0.0=pypi_0
+jsonschema=4.23.0=pypi_0
+jsonschema-specifications=2024.10.1=pypi_0
+jupyter=1.1.1=pypi_0
+jupyter-client=8.6.3=pypi_0
+jupyter-console=6.6.3=pypi_0
+jupyter-core=5.7.2=pypi_0
+jupyter-events=0.10.0=pypi_0
+jupyter-lsp=2.2.5=pypi_0
+jupyter-server=2.14.2=pypi_0
+jupyter-server-terminals=0.5.3=pypi_0
+jupyterlab=4.2.5=pypi_0
+jupyterlab-pygments=0.3.0=pypi_0
+jupyterlab-server=2.27.3=pypi_0
+jupyterlab-widgets=3.0.13=pypi_0
+kiwisolver=1.4.7=py313h1ec8472_0
+lcms2=2.15=ha5c8aab_0
+lerc=3.0=h0e60522_0
+libblas=3.9.0=24_win64_mkl
+libbrotlicommon=1.1.0=h2466b09_2
+libbrotlidec=1.1.0=h2466b09_2
+libbrotlienc=1.1.0=h2466b09_2
+libcblas=3.9.0=24_win64_mkl
+libdeflate=1.17=hcfcfb64_0
+libffi=3.4.4=hd77b12b_1
+libhwloc=2.11.1=default_h8125262_1000
+libiconv=1.17=hcfcfb64_2
+liblapack=3.9.0=24_win64_mkl
+libmpdec=4.0.0=h827c3e9_0
+libpng=1.6.39=h8cc25b3_0
+libtiff=4.5.1=hd77b12b_0
+libwebp-base=1.4.0=hcfcfb64_0
+libxml2=2.13.1=h24da03e_2
+lz4-c=1.9.4=hcfcfb64_0
+markupsafe=3.0.2=py313hb4c8b1a_0
+matplotlib-base=3.9.2=py313h81b4f16_1
+matplotlib-inline=0.1.7=pypi_0
+mistune=3.0.2=pypi_0
+mkl=2024.1.0=h66d3029_694
+munkres=1.1.4=pyh9f0ad1d_0
+nbclient=0.10.0=pypi_0
+nbconvert=7.16.4=pypi_0
+nbformat=5.10.4=pypi_0
+nest-asyncio=1.6.0=pypi_0
+notebook=7.2.2=pypi_0
+notebook-shim=0.2.4=pypi_0
+numpy=2.1.2=py313hd65a2fa_0
+openjpeg=2.5.2=hae555c5_0
+openssl=3.3.2=h2466b09_0
+overrides=7.7.0=pypi_0
+packaging=24.1=pyhd8ed1ab_0
+pandas=2.2.3=py313hf91d08e_1
+pandocfilters=1.5.1=pypi_0
+parso=0.8.4=pypi_0
+pillow=11.0.0=pypi_0
+pip=24.2=py313haa95532_0
+platformdirs=4.3.6=pypi_0
+prometheus-client=0.21.0=pypi_0
+prompt-toolkit=3.0.48=pypi_0
+psutil=6.1.0=pypi_0
+pthreads-win32=2.9.1=h2466b09_4
+pure-eval=0.2.3=pypi_0
+pycparser=2.22=pypi_0
+pygments=2.18.0=pypi_0
+pyparsing=3.2.0=pyhd8ed1ab_1
+python=3.13.0=hadb2040_100_cp313
+python-dateutil=2.9.0.post0=pypi_0
+python-json-logger=2.0.7=pypi_0
+python-tzdata=2024.2=pyhd8ed1ab_0
+python_abi=3.13=0_cp313
+pytz=2024.2=pypi_0
+pywin32=308=pypi_0
+pywinpty=2.0.14=pypi_0
+pyyaml=6.0.2=pypi_0
+pyzmq=26.2.0=pypi_0
+qhull=2020.2=hc790b64_5
+referencing=0.35.1=pypi_0
+requests=2.32.3=pypi_0
+rfc3339-validator=0.1.4=pypi_0
+rfc3986-validator=0.1.1=pypi_0
+rpds-py=0.20.0=pypi_0
+scipy=1.14.1=py313hdf33807_0
+send2trash=1.8.3=pypi_0
+setuptools=75.1.0=py313haa95532_0
+six=1.16.0=pyh6c4a22f_0
+sniffio=1.3.1=pypi_0
+soupsieve=2.6=pypi_0
+sqlite=3.45.3=h2bbff1b_0
+stack-data=0.6.3=pypi_0
+sweetviz=2.3.1=pyhd8ed1ab_0
+tbb=2021.13.0=hc790b64_0
+terminado=0.18.1=pypi_0
+tinycss2=1.3.0=pypi_0
+tk=8.6.14=h0416ee5_0
+tornado=6.4.1=pypi_0
+tqdm=4.66.5=pyhd8ed1ab_0
+traitlets=5.14.3=pypi_0
+types-python-dateutil=2.9.0.20241003=pypi_0
+tzdata=2024b=h04d1e81_0
+ucrt=10.0.22621.0=h57928b3_1
+uri-template=1.3.0=pypi_0
+urllib3=2.2.3=pypi_0
+vc=14.40=h2eaa2aa_1
+vc14_runtime=14.40.33810=hcc2c482_22
+vs2015_runtime=14.40.33810=h3bf8584_22
+wcwidth=0.2.13=pypi_0
+webcolors=24.8.0=pypi_0
+webencodings=0.5.1=pypi_0
+websocket-client=1.8.0=pypi_0
+wheel=0.44.0=py313haa95532_0
+widgetsnbextension=4.0.13=pypi_0
+xz=5.4.6=h8cc25b3_1
+zipp=3.20.2=pyhd8ed1ab_0
+zlib=1.2.13=h8cc25b3_1
+zstd=1.5.6=h8880b57_0
